--- a/qualitas-webapp/pom.xml
+++ b/qualitas-webapp/pom.xml
@@ -67,10 +67,6 @@
 			<artifactId>qualitas-engines-api-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.googlecode.qualitas.integration.amqp</groupId>
-			<artifactId>qualitas-integration-amqp</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>com.googlecode.qualitas.services.security</groupId>
 			<artifactId>qualitas-services-security-spring</artifactId>
 		</dependency>
@@ -85,6 +81,12 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.qualitas.internal.services</groupId>
+			<artifactId>qualitas-internal-services-spring</artifactId>
+			<version>0.0.5-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
