renamed qualitas-services-security-spring qualitas-security-services-spring

--- a/qualitas-security-services-spring/pom.xml
+++ b/qualitas-security-services-spring/pom.xml
@@ -8,8 +8,8 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.googlecode.qualitas.services.security</groupId>
-	<artifactId>qualitas-services-security-spring</artifactId>
+	<groupId>com.googlecode.qualitas.security.services</groupId>
+	<artifactId>qualitas-security-services-spring</artifactId>
 	<packaging>jar</packaging>
 
 	<name>qualitas-services-security-spring</name>
