--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -243,8 +243,8 @@
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.googlecode.qualitas.services.security</groupId>
-				<artifactId>qualitas-services-security-spring</artifactId>
+				<groupId>com.googlecode.qualitas.security.services</groupId>
+				<artifactId>qualitas-security-services-spring</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
