--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -299,8 +299,8 @@
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.googlecode.qualitas.execution.monitor</groupId>
-				<artifactId>qualitas-execution-monitor-webservice</artifactId>
+				<groupId>com.googlecode.qualitas.internal.monitor</groupId>
+				<artifactId>qualitas-internal-monitor-webservice</artifactId>
 				<version>${project.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
