--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -306,6 +306,13 @@
 				<scope>compile</scope>
 			</dependency>
 			<dependency>
+                <groupId>com.googlecode.qualitas.internal.monitor</groupId>
+                <artifactId>qualitas-internal-monitor-camel</artifactId>
+                <version>${project.version}</version>
+                <type>jar</type>
+                <scope>compile</scope>
+            </dependency>
+			<dependency>
 				<groupId>com.googlecode.qualitas.internal.model</groupId>
 				<artifactId>qualitas-internal-model</artifactId>
 				<version>${project.version}</version>
