--- a/qualitas-internal-integration-amqp/pom.xml
+++ b/qualitas-internal-integration-amqp/pom.xml
@@ -8,8 +8,8 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.googlecode.qualitas.integration.amqp</groupId>
-	<artifactId>qualitas-integration-amqp</artifactId>
+	<groupId>com.googlecode.qualitas.internal.integration</groupId>
+	<artifactId>qualitas-internal-integration-amqp</artifactId>
 	<packaging>jar</packaging>
 
 	<name>qualitas-integration-amqp</name>
@@ -20,8 +20,8 @@
 			<artifactId>junit</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.googlecode.qualitas.integration.api</groupId>
-			<artifactId>qualitas-integration-api</artifactId>
+			<groupId>com.googlecode.qualitas.internal.integration</groupId>
+			<artifactId>qualitas-internal-integration-api</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.amqp</groupId>
