--- a/qualitas-internal-services/pom.xml
+++ b/qualitas-internal-services/pom.xml
@@ -33,8 +33,8 @@
 			<artifactId>qualitas-internal-model</artifactId>
 		</dependency>
 		<dependency>
-            <groupId>com.googlecode.qualitas.integration.api</groupId>
-            <artifactId>qualitas-integration-api</artifactId>
+            <groupId>com.googlecode.qualitas.internal.integration</groupId>
+            <artifactId>qualitas-internal-integration-api</artifactId>
         </dependency>
 	</dependencies>
 </project>
