--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -90,7 +90,7 @@
 		<commons-logging.version>1.1</commons-logging.version>
 		<commons-io.version>1.4</commons-io.version>
 		<ode-axis2.version>1.3.5</ode-axis2.version>
-		<failsafe-maven-plugin.version>2.4.3-alpha-1</failsafe-maven-plugin.version>
+		<maven-failsafe-plugin.version>2.12</maven-failsafe-plugin.version>
 		<commons-exec.version>1.0.1</commons-exec.version>
 		<maven-checkstyle-plugin.version>2.9.1</maven-checkstyle-plugin.version>
 		<xalan.version>2.7.1</xalan.version>
@@ -805,6 +805,23 @@
 							</pluginExecutions>
 						</lifecycleMappingMetadata>
 					</configuration>
+				</plugin>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-failsafe-plugin</artifactId>
+					<version>${maven-failsafe-plugin.version}</version>
+					<configuration>
+						<encoding>${project.build.sourceEncoding}</encoding>
+						<argLine>-javaagent:${jacoco.agent.path}=destfile=${jacoco.file.path}</argLine>
+					</configuration>
+					<executions>
+						<execution>
+							<goals>
+								<goal>integration-test</goal>
+								<goal>verify</goal>
+							</goals>
+						</execution>
+					</executions>
 				</plugin>
 			</plugins>
 		</pluginManagement>
