--- a/qualitas-engines-ode-resolution/pom.xml
+++ b/qualitas-engines-ode-resolution/pom.xml
@@ -4,6 +4,7 @@
 		<artifactId>qualitas-parent</artifactId>
 		<groupId>com.googlecode.qualitas</groupId>
 		<version>0.0.5-SNAPSHOT</version>
+		<relativePath>../qualitas-parent</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 
