added new parameters for the maven-compiler-plugin (builds are failing on CloudBees because compiler throws OutOfMemory error)

--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -698,6 +698,9 @@
 						<source>${project.build.sourceVersion}</source>
 						<target>${project.build.targetVersion}</target>
 						<encoding>${project.build.sourceEncoding}</encoding>
+						<fork>true</fork>
+						<meminitial>128m</meminitial>
+						<maxmem>512m</maxmem>
 					</configuration>
 				</plugin>
 				<plugin>
