changed binary search to commons-lang3 contains

--- a/qualitas-engines-ode-core/pom.xml
+++ b/qualitas-engines-ode-core/pom.xml
@@ -27,6 +27,11 @@
 			<artifactId>commons-io</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.googlecode.qualitas.utils</groupId>
 			<artifactId>qualitas-utils-zip</artifactId>
 		</dependency>
