--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -89,6 +89,7 @@
 		<mockito.version>1.8.5</mockito.version>
 		<commons-logging.version>1.1</commons-logging.version>
 		<commons-io.version>1.4</commons-io.version>
+		<commons-lang.version>3.1</commons-lang.version>
 		<ode-axis2.version>1.3.5</ode-axis2.version>
 		<maven-failsafe-plugin.version>2.12</maven-failsafe-plugin.version>
 		<commons-exec.version>1.0.1</commons-exec.version>
@@ -429,6 +430,13 @@
 				<groupId>commons-io</groupId>
 				<artifactId>commons-io</artifactId>
 				<version>${commons-io.version}</version>
+				<type>jar</type>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.commons</groupId>
+				<artifactId>commons-lang3</artifactId>
+				<version>${commons-lang.version}</version>
 				<type>jar</type>
 				<scope>compile</scope>
 			</dependency>
