--- a/qualitas-engines-api-invocation/pom.xml
+++ b/qualitas-engines-api-invocation/pom.xml
@@ -31,5 +31,17 @@
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>com.googlecode.qualitas.utils</groupId>
+			<artifactId>qualitas-utils-dom</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+		</dependency>
 	</dependencies>
 </project>
