--- a/qualitas-internal-model/pom.xml
+++ b/qualitas-internal-model/pom.xml
@@ -42,6 +42,16 @@
 			<artifactId>hsqldb</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc14</artifactId>
+			<version>10.2.0.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-ejb_3.0_spec</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.googlecode.qualitas.engines.api</groupId>
 			<artifactId>qualitas-engines-api-configuration</artifactId>
 		</dependency>
