--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -113,6 +113,8 @@
 		<javax.persistence.version>2.0.2</javax.persistence.version>
 		<eclipselink.version>2.3.2</eclipselink.version>
 		<hsqldb.version>2.2.8</hsqldb.version>
+		<ojdbc12.version>10.2.0.4.0</ojdbc12.version>
+		<geronimo-ejb_3.0_spec.version>1.0.1</geronimo-ejb_3.0_spec.version>
 	</properties>
 
 	<dependencyManagement>
@@ -676,6 +678,18 @@
 				<artifactId>hsqldb</artifactId>
 				<scope>test</scope>
 				<version>${hsqldb.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.oracle</groupId>
+				<artifactId>ojdbc14</artifactId>
+				<version>${ojdbc12.version}</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.geronimo.specs</groupId>
+				<artifactId>geronimo-ejb_3.0_spec</artifactId>
+				<version>${geronimo-ejb_3.0_spec.version}</version>
+				<scope>compile</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
