added Spring bindings for automatic transaction management

--- a/qualitas-internal-model-spring/pom.xml
+++ b/qualitas-internal-model-spring/pom.xml
@@ -24,9 +24,15 @@
 			<artifactId>qualitas-internal-model</artifactId>
 		</dependency>
 		<dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-orm</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
