fixed some issues after last refactorings, all were spotted during end-to-end testing

--- a/qualitas-internal-model/pom.xml
+++ b/qualitas-internal-model/pom.xml
@@ -43,7 +43,7 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.derby</groupId>
-			<artifactId>derby</artifactId>
+			<artifactId>derbyclient</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
