--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -111,7 +111,7 @@
 		<javax.persistence.version>2.0.2</javax.persistence.version>
 		<eclipselink.version>2.3.2</eclipselink.version>
 		<hsqldb.version>2.2.8</hsqldb.version>
-		<derby.version>10.5.3.0_1</derby.version>
+		<derby.version>10.8.1.2</derby.version>
 		<geronimo-ejb_3.0_spec.version>1.0.1</geronimo-ejb_3.0_spec.version>
 		<geronimo-jms_1.1_spec.version>1.1.1</geronimo-jms_1.1_spec.version>
 	</properties>
@@ -629,7 +629,7 @@
 			</dependency>
 			<dependency>
 				<groupId>org.apache.derby</groupId>
-				<artifactId>derby</artifactId>
+				<artifactId>derbyclient</artifactId>
 				<version>${derby.version}</version>
 				<scope>compile</scope>
 			</dependency>
