--- a/qualitas-internal-dao/pom.xml
+++ b/qualitas-internal-dao/pom.xml
@@ -18,10 +18,22 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.hsqldb</groupId>
+			<artifactId>hsqldb</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.derby</groupId>
+			<artifactId>derbyclient</artifactId>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.qualitas.internal.model</groupId>
 			<artifactId>qualitas-internal-model</artifactId>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
