--- a/qualitas-internal-services-spring/pom.xml
+++ b/qualitas-internal-services-spring/pom.xml
@@ -28,8 +28,8 @@
 			<artifactId>qualitas-internal-integration-amqp</artifactId>
 		</dependency>
 		<dependency>
-            <groupId>com.googlecode.qualitas.internal.model</groupId>
-            <artifactId>qualitas-internal-model-spring</artifactId>
+            <groupId>com.googlecode.qualitas.internal.dao</groupId>
+            <artifactId>qualitas-internal-dao-spring</artifactId>
         </dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
