--- a/qualitas-parent/pom.xml
+++ b/qualitas-parent/pom.xml
@@ -97,7 +97,7 @@
 		<slf4j.version>1.6.1</slf4j.version>
 		<log4j.version>1.2.16</log4j.version>
 		<commons-fileupload.version>1.2.2</commons-fileupload.version>
-		<jetty-maven-plugin.version>7.6.0.v20120127</jetty-maven-plugin.version>
+		<jetty.version>7.6.0.v20120127</jetty.version>
 		<spring.version>3.0.6.RELEASE</spring.version>
 		<camel.version>2.9.0</camel.version>
 		<spring-rabbit.version>1.0.0.RELEASE</spring-rabbit.version>
@@ -114,6 +114,8 @@
 		<derby.version>10.8.1.2</derby.version>
 		<geronimo-ejb_3.0_spec.version>1.0.1</geronimo-ejb_3.0_spec.version>
 		<geronimo-jms_1.1_spec.version>1.1.1</geronimo-jms_1.1_spec.version>
+		<activemq.version>5.5.1</activemq.version>
+		<xbean.version>3.9</xbean.version>
 	</properties>
 
 	<dependencyManagement>
@@ -651,6 +653,18 @@
 				<version>${geronimo-jms_1.1_spec.version}</version>
 				<scope>compile</scope>
 			</dependency>
+			<dependency>
+				<groupId>org.apache.activemq</groupId>
+				<artifactId>activemq-core</artifactId>
+				<version>${activemq.version}</version>
+				<scope>compile</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.activemq</groupId>
+				<artifactId>activemq-pool</artifactId>
+				<version>${activemq.version}</version>
+				<scope>compile</scope>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -763,7 +777,7 @@
 				<plugin>
 					<groupId>org.mortbay.jetty</groupId>
 					<artifactId>jetty-maven-plugin</artifactId>
-					<version>${jetty-maven-plugin.version}</version>
+					<version>${jetty.version}</version>
 					<configuration>
 						<systemProperties>
 							<!-- enable easy JMX connection to JConsole -->
