--- a/qualitas-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/qualitas-webapp/src/main/webapp/WEB-INF/web.xml
@@ -4,12 +4,12 @@
 	xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 
 	<display-name>Qualitas web application</display-name>
-	
+
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/qualitas-webapp-context.xml</param-value>
 	</context-param>
-	
+
 	<filter>
 		<filter-name>springCharacterEncodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -55,5 +55,16 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+
+	<resource-ref>
+		<res-ref-name>jms/Qualitas.EclipseLinkCacheConnectionFactory</res-ref-name>
+		<res-type>javax.jms.QueueConnectionFactory</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+
+	<resource-env-ref>
+		<resource-env-ref-name>jms/Qualitas.EclipseLinkCacheTopic</resource-env-ref-name>
+		<resource-env-ref-type>javax.jms.Topic</resource-env-ref-type>
+	</resource-env-ref>
 
 </web-app>
