--- a/qualitas-internal-installation-camel/pom.xml
+++ b/qualitas-internal-installation-camel/pom.xml
@@ -21,6 +21,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-ognl</artifactId>
+			<version>${camel.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-spring</artifactId>
 			<scope>compile</scope>
 		</dependency>
